Used VS Code hotkeys

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,5 +22,6 @@
     <li>Шмаль Иван Максимович</li>
     <li>Студент группы ИСП-232</li>
     <li>ИСРПО</li>
+    <!-- <li>ИСРПО</li> -->
   </body>
 </html>
