Tri commita v odnom

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,5 +23,7 @@
     <li>Студент группы ИСП-232</li>
     <li>ИСРПО</li>
     <!-- <li>ИСРПО</li> -->
+
+     <a href="contacts.html">Перейти на сайт</a>
   </body>
 </html>
